welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:3: error: '(' expected but identifier found.
 if isFacingTrail() == true {
    ^SlugHunting:7: error: illegal start of simple expression
}
^